tests/cases/positive/anon.lang
assert( 1 == fn() -> i32 {1}() )
