tests/cases/negative/undefined_variable.lang
if (false) {
  i32 x = 1
}

assert(x == 1)
